# nonebot-plugin-fakepic

./: LICENSE  README.md  pyproject.toml
nonebot-plugin-fakepic/: LICENSE  pyproject.toml
nonebot-plugin-fakepic/nonebot_plugin_fakepic/: __init__.py  __main__.py
nonebot_plugin_fakepic/: __init__.py  __main__.py  config.py  draw.py
