[tool.poetry]
name = "nonebot-plugin-fakepic"
version = "0.2.0"
description = "A nonebot plugin for fake chat screenshots"
authors = ["lm175 <17736762488@163.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lm175/nonebot-plugin-fakepic"

[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = ">=2.3.2"
nonebot-adapter-onebot = ">=2.3.1"
httpx = ">=0.27.0"
pil_utils = "0.1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
