[project]
name = "nonebot-plugin-fakepic"
version = "0.1.0"
description = "A nonebot plugin for fake chat screenshots"
authors = [{ name="lm175", email="17736762488@163.com" }]
license = { text="MIT" }
readme = "README.md"

dependencies = [
    "python >= 3.10",
    "nonebot2 >= 2.3.2",
    "httpx >= 0.27.3",
    "pil_utils == 0.1.10",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"